fix: missing align items

--- a/src/pages/Cabinet/Reviews.scss
+++ b/src/pages/Cabinet/Reviews.scss
@@ -29,6 +29,7 @@
       justify-content: space-between;
       text-align: center;
       padding: 15px;
+      align-items: center;
 
       .description {
         color: #fff;
